# Youtube-Tagger

./: .gitignore  Dockerfile.postgres  HELL.md  README.md  docker-compose.yml
chrome/: background.js  popup.js
cpp_backend/: CMakeLists.txt  Dockerfile.cpp_backend  run.sh
cpp_backend/src/: config.h  database.cpp  database.h  helpers.cpp  helpers.h  main.cpp  mysql.h
firefox/: background.js  manifest.json  popup.js
frontend/: index.html  script.js  style.css
python_service/: README.md  app.py  requirements.txt
youtube-tagger-extension/: manifest.json  popup.html
